# cura-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
data/raw/guidelines/: acetaminophen.txt  amoxicillin.txt  ibuprofen.txt  lisinopril.txt  metformin.txt  warfarin.txt
eval/: compare_chunking.py  golden.jsonl  metrics.py  runner.py
frontend/: app.py
scripts/: seed.py
src/curarag/: cli.py  config.py  embeddings.py  gradio_ui.py  models.py  seed.py
src/curarag/api/: main.py  routes.py  schemas.py
src/curarag/generation/: answerer.py  llm.py  prompts.py
src/curarag/ingestion/: chunking.py  dedupe.py  loaders.py  pipeline.py
src/curarag/retrieval/: dense.py  fusion.py  rerank.py  retriever.py  sparse.py
src/curarag/verification/: citations.py  confidence.py
tests/: test_api.py  test_chunking.py  test_citations.py  test_fusion.py  test_retriever.py
