[project]
name = "curarag"
version = "0.1.0"
description = "Clinical RAG that answers only from verified drug labels and guidelines, cites every claim, verifies citations, and abstains when evidence is insufficient."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "qdrant-client>=1.9",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7",
    "langchain-huggingface>=0.0.3",
    "langchain-core>=0.2",
    "langchain-text-splitters>=0.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "pypdf>=4.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "openai>=1.30",
    "anthropic>=0.28",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
frontend = [
    "streamlit>=1.35",
]

[project.scripts]
curarag = "curarag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curarag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP042", "B008"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
